                    ----------------
This file should be used by the G4 example coordinator to briefly
summarize all major modifications introduced in the code and keep
track of all tags.

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
 
     ----------------------------------------------------------

October 16, 2014 P. Gumplinger (WLS-V10-00-03)
- fix coding guideline 1.4 in WLSDetectorMessenger

July 11, 2014 P. Gumplinger (WLS-V10-00-02)
- Use implicit dimensioning for all arrays and assert that they are the
  same (thanks to M. Kelsey for suggesting this)

June 06, 2014 A. Dotti (WLS-V10-00-01)
- Migration to new GPS for MT

December 04, 2013 P. Gumplinger (WLS-V10-00-00)
- Fixes in gui.mac:
  Commented out command specific to B2 example
  Let execute vis.mac first to make the command in added menus available;
  Corrected wireframe parameter

December 02, 2013 G. Folger     (WLS-V09-06-15)
- corrected avoiding re-use of pointer into temporary in
  WLSDetectorConstruction.cc

December 02, 2013 G. Folger     (WLS-V09-06-14)
- avoid re-use of pointer into temporary in WLSDetectorConstruction.cc

November 29, 2013 P. Gumplinger (WLS-V09-06-13)
- do not user G4PhysListFactory, remove B2 stuff from gui.mac

November 28, 2013 P. Gumplinger (WLS-V09-06-12)
- add gui.mac, icons.mac and run.png

November 27, 2013 P. Gumplinger (WLS-V09-06-11)
- Fixed ConstructSDandField():
  Moved setting the SD and field manager to logical volume outside the tests
- Put back cleaning volumes and solid stores in Construct()
- add gui.mac

November 22, 2013 P. Gumplinger (WLS-V09-06-10)
- replace UpdateGeometry with ReinitializeGeometry

October 29, 2013 P. Gumplinger (WLS-V09-06-09)
- make sure only one SteppingVerbose is activated, remove SetNumberOfThreads

October 09, 2013 I. Hrivnacova (WLS-V09-06-08)
- Instantiate SteppingVerbose in a new method in WLSActionInitialization