@@ -50,7 +50,7 @@ class WLSActionInitialization : public G4VUserActionInitialization
 
     virtual void BuildForMaster() const;
     virtual void Build() const;
-    
+ 
     virtual G4VSteppingVerbose* InitializeSteppingVerbose() const;
 
   private:
