@@ -16,6 +16,10 @@ track of all tags.
  
      ----------------------------------------------------------
 
+October 17, 2014 P. Gumplinger (WLS-V10-00-04)
+- remove double blank lines in WLSDetectorConstruction.cc and
+  WLSPrimaryGeneratorAction.cc
+
 October 16, 2014 P. Gumplinger (WLS-V10-00-03)
 - fix coding guideline 1.4 in WLSDetectorMessenger
 
